# domain-scan

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  loop.sh  prompt.md
crates/domain-scan-cli/: Cargo.toml
crates/domain-scan-cli/src/: main.rs  tui.rs
crates/domain-scan-cli/tests/: cli_integration.rs
crates/domain-scan-cli/tests/snapshots/: cli_integration__interfaces_event_handler_json.snap  cli_integration__search_repo_json.snap  cli_integration__stats_json.snap
crates/domain-scan-core/: Cargo.toml
crates/domain-scan-core/benches/: cached_rescan.rs  cli_startup.rs  parse_throughput.rs
crates/domain-scan-core/queries/cpp/: classes.scm  functions.scm  imports.scm  methods.scm  schemas.scm  templates.scm  virtual.scm
crates/domain-scan-core/queries/csharp/: classes.scm  imports.scm  interfaces.scm  methods.scm  schemas.scm  services.scm
crates/domain-scan-core/queries/go/: functions.scm  imports.scm  interfaces.scm  methods.scm  schemas.scm  services.scm  structs.scm
crates/domain-scan-core/queries/java/: classes.scm  imports.scm  interfaces.scm  methods.scm  schemas.scm  services.scm
crates/domain-scan-core/queries/kotlin/: classes.scm  imports.scm  interfaces.scm  methods.scm  schemas.scm  services.scm
crates/domain-scan-core/queries/php/: classes.scm  imports.scm  interfaces.scm  methods.scm  traits.scm
crates/domain-scan-core/queries/python/: abstract.scm  classes.scm  decorators.scm  functions.scm  imports.scm  protocols.scm  schemas.scm  services.scm
crates/domain-scan-core/queries/ruby/: classes.scm  imports.scm  methods.scm  modules.scm
crates/domain-scan-core/queries/rust/: functions.scm  impls.scm  imports.scm  schemas.scm  services.scm  traits.scm  types.scm
crates/domain-scan-core/queries/scala/: classes.scm  imports.scm  methods.scm  traits.scm
crates/domain-scan-core/queries/swift/: classes.scm  extensions.scm  imports.scm  interfaces.scm  methods.scm  schemas.scm  services.scm
crates/domain-scan-core/queries/typescript/: classes.scm  exports.scm  functions.scm  (+6 more)
crates/domain-scan-core/src/: build_status.rs  cache.rs  config.rs  doctor.rs  field_mask.rs  index.rs  input_validation.rs  ir.rs  lang.rs  lib.rs  manifest.rs  manifest_builder.rs  output.rs  parser.rs  prompt.rs  query_engine.rs  resolver.rs  schema.rs  types.rs  validate.rs  walker.rs
crates/domain-scan-core/tests/: adversarial.rs  benchmark_assertions.rs  integration_cpp.rs  integration_cross_file.rs  integration_csharp.rs  integration_go.rs  integration_java.rs  integration_kotlin.rs  integration_manifest_builder.rs  integration_php.rs  integration_pipeline.rs  integration_python.rs  integration_ruby.rs  integration_rust.rs  integration_scala.rs  integration_swift.rs  integration_typescript.rs  parallel_stress.rs  proptest_ir.rs  real_codebase.rs
crates/domain-scan-tauri/: Cargo.toml  tauri.conf.json
crates/domain-scan-tauri/capabilities/: default.json
crates/domain-scan-tauri/icons/: icon.icns
crates/domain-scan-tauri/src/: commands.rs  lib.rs  main.rs
crates/domain-scan-tauri/ui/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
(+194 files in other folders)
