[package]
name = "domain-scan-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "domain-scan"
path = "src/main.rs"

[dependencies]
domain-scan-core = { path = "../domain-scan-core" }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
schemars = "0.8"
env_logger = "0.11"
log = "0.4"
ratatui = "0.30"
crossterm = "0.29"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
insta = { version = "1", features = ["json"] }
serde_json = "1"
