[package]
name = "domain-scan-core"
version.workspace = true
edition.workspace = true

[dependencies]
ignore = "0.4"
tree-sitter = "0.22"
tree-sitter-typescript = "0.21"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1"
tracing = "0.1"
tree-sitter-rust = "0.21"
tree-sitter-go = "0.21"
tree-sitter-python = "0.21"
tree-sitter-java = "0.21"
tree-sitter-kotlin-ng = "1.0"
tree-sitter-scala = "0.23"
tree-sitter-language = "0.1"
tree-sitter-c-sharp = "0.23"

[dev-dependencies]
tempfile = "3"
rstest = "0.23"
proptest = "1"
insta = { version = "1", features = ["json"] }
filetime = "0.2"
